--- a/ProjectOne/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne/ProjectOne.csproj
@@ -11,4 +11,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectOne.DataAccess\ProjectOne.DataAccess.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
