Implemented AutoMapper (have not tested). Build Repo Interface

--- a/ProjectOne/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne/ProjectOne.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
@@ -14,11 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProjectOne.DataAccess\ProjectOne.DataAccess.csproj" />
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <Folder Include="Repository\" />
   </ItemGroup>
 
 </Project>
