added photo, started css

--- a/ProjectOne/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne/ProjectOne.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\ProjectOne.Library\ProjectOne.Library.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
